5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1789_3136.log
== TEST (2019-05-29 18:16:13) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:16:21) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:57) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=0
while (i=size(vet)):
	print (vet)

-- ERROR:
File "XXXX", line 6
    while (i=size(vet)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:16) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=0
while (i=size(vet))
	print (vet)

-- ERROR:
File "XXXX", line 6
    while (i=size(vet))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:25) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=0
while (i==size(vet)):
	print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:41) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=4

while (i==size(vet)):
	
	print (vet)
media= exp(log(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:55) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=4

while (i==size(vet)):
	
	print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:06) 
-- CODE:
from math import*
from numpy import*

vet=array(eval(input("v: ")))
i=4

while (i==size(vet)):
	
	print (vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
